ingress/allow-ingress-nginx-to-homarr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress-nginx
  namespace: homarr
spec:
  podSelector:
    matchLabels:
      app: homarr
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: rke2-ingress-nginx
              app.kubernetes.io/component: controller
      ports:
        - protocol: TCP
          port: 7575
  policyTypes:
    - Ingress
